improved secrets path separator